# MacroSignage

./: .env.example  .gitignore  README.md  pyproject.toml  wsgi.py
.github/: release.yml
.github/workflows/: ci.yml  client-build.yml  client-release.yml  publish-pypi.yml
client/: MacroSignageClient.spec  README.md  pyproject.toml
client/macrosignage_client/: __init__.py  app.py  kiosk.py
deploy/docker/: Dockerfile  docker-compose.yml
deploy/systemd/: macrosignage.service
docs/: api-tokens.md  architecture.md  auth-rbac.md  client.md  configuration.md  deployment.md  development.md  displays.md  documentation-roadmap.md  index.md  installation.md  media.md  production-hardening-roadmap.md  realtime-player.md  release-documentation-checklist.md  rest-api.md  scheduling.md  troubleshooting.md
docs/decisions/: 001-runtime-schema-strategy.md  002-token-secured-display-players.md  003-standalone-client-packaging.md
src/macrosignage/: __init__.py  app.py  cli.py  config.py  diagnostics.py  extensions.py  time_utils.py  upgrade.py
src/macrosignage/blueprints/core/: __init__.py
src/macrosignage/features/: __init__.py  associations.py
src/macrosignage/features/admin/: forms.py  models.py  routes.py  services.py
src/macrosignage/features/admin/templates/admin/: dashboard.html  database.html  logo.html  settings.html
src/macrosignage/features/admin/templates/admin/api_tokens/: list.html
src/macrosignage/features/admin/templates/admin/displays/: claim.html  detail.html  form.html  list.html  scan.html
src/macrosignage/features/admin/templates/admin/fonts/: form.html  list.html
src/macrosignage/features/admin/templates/admin/media/: detail.html  form.html  list.html
src/macrosignage/features/admin/templates/admin/schedules/: detail.html  form.html  list.html
src/macrosignage/features/admin/templates/admin/users/: detail.html  form.html  list.html
src/macrosignage/features/api/: routes.py  serializers.py
src/macrosignage/features/auth/: api_token_forms.py  forms.py  models.py  permissions.py  routes.py  services.py  token_routes.py
src/macrosignage/features/auth/templates/auth/: login.html  password_reset_form.html  password_reset_request.html  setup.html
src/macrosignage/features/displays/: __init__.py  forms.py  models.py  routes.py  services.py
src/macrosignage/features/displays/templates/displays/: maintenance.html  offline.html  pair_failed.html  player.html  register.html  unauthorized.html
src/macrosignage/features/media/: __init__.py  forms.py  models.py  routes.py  services.py
src/macrosignage/features/schedules/: __init__.py  forms.py  models.py  routes.py  services.py
src/macrosignage/static/css/: main.css  theme.css
src/macrosignage/static/js/: display-player.js  main.js
src/macrosignage/templates/: base.html
src/macrosignage/templates/errors/: 500.html
src/macrosignage/templates/layouts/: _base.html  admin.html  auth.html
src/macrosignage/templates/pages/: index.html
src/macrosignage/web/: routes.py
src/macrosignage/web/templates/web/: index.html
tests/: test_admin_crud.py  test_admin_dashboard.py  test_api.py  test_auth.py  test_cli.py  test_client_app.py  test_config.py  test_display_player.py  test_docs.py  test_operational_readiness.py  test_production_hardening.py  test_release_workflows.py  test_slider_media.py  test_v05_polish_scale.py
