[project]
name = "MacroSignage"
dynamic = ["version"]
description = "Web-based Digital Signage System"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Javier Baez", email = "baezdevs@gmail.com" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=3.1",
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "Flask-SQLAlchemy>=3.1",
    "python-dotenv>=1.0",
    "python-slugify>=8.0",
    "python-usernames>=1.0",
    "email-validator>=2.0",
]

[project.urls]
Homepage = "https://github.com/baezfb/MacroSignage"
"Bug Tracker" = "https://github.com/baezfb/MacroSignage/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/macrosignage"]

[tool.hatch.build.targets.wheel.shared-data]
"src/wsgi.py" = "wsgi.py"
