[project]
name = "MacroSignage"
dynamic = ["version"]
description = "Web-based Digital Signage System"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Javier Baez", email = "baezdevs@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask>=3.1",
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "Flask-SQLAlchemy>=3.1",
    "python-dotenv>=1.0",
    "python-slugify>=8.0",
    "python-usernames>=1.0",
    "email-validator>=2.0",
]

[project.scripts]
macrosignage = "macrosignage.cli:main"

[project.urls]
Homepage = "https://github.com/baezfb/MacroSignage"
"Bug Tracker" = "https://github.com/baezfb/MacroSignage/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/macrosignage"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude/",
    "/.gitignore",
    "/.idea/",
    "/uv.lock",
    "/src/wsgi.py",
]
