[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "MacroSignage"
version = "0.2.2"
description = "Web-based Digital Signage System"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
    "dashboard",
    "digital-signage",
    "display-management",
    "flask",
    "signage",
]
authors = [
    { name = "Javier Baez", email = "baezdevs@gmail.com" },
]
maintainers = [
    { name = "Javier Baez", email = "baezdevs@gmail.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Display",
]
dependencies = [
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "email-validator>=2.3.0",
    "python-usernames>=1.1.0",
    "flask-migrate>=4.1.0",
    "waitress>=3.0.2",
]

[project.urls]
Homepage = "https://github.com/BaezFJ/MacroSignage"
Repository = "https://github.com/BaezFJ/MacroSignage"
Issues = "https://github.com/BaezFJ/MacroSignage/issues"
Changelog = "https://github.com/BaezFJ/MacroSignage/releases"

[project.scripts]
macrosignage = "macrosignage.cli:main"
macrosignage-prod = "macrosignage.cli:prod_main"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=8.4.2",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.package-data]
macrosignage = [
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.map",
    "**/*.json",
    "**/*.png",
    "**/*.jpg",
    "**/*.svg",
    "**/*.webp",
    "**/LICENSE*",
]
